# Startcpp

./: .gitignore  CMakeLists.txt  README.md  createExe.sh
include/: hello_world.h
src/: HelloWorld.cpp  hello_world.cpp
